--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,22 +79,6 @@
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 a {
   color: inherit;
   text-decoration: none;
@@ -104,4 +88,926 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+
+
+
+.notSticked .color-nav{
+	z-index: 99;
+}
+.fixed{
+    display:block;
+    position:absolute;
+    top:0;
+    left:0;
+    width:90%;
+    background:white;
+    text-align:center;
+    padding: 20px 0;
+}
+
+.color-nav{
+	
+	background: rgb(255,255,255);
+	background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(57,57,107,1) 60%, rgba(46,46,46,1) 100%);
+  
+}
+
+.button-style{
+    background-color: transparent;
+    border-radius: 20%;
+    border-width: 1px;
+    border-color: white;
+    padding: 7px;
+}
+
+.purple{
+    color: #7030a0;
+
+}
+
+.color{
+    background-color: rgb(211, 211, 211);
+}
+
+.font-size{
+    font-size: 10px;
+}
+
+.textcard{
+    margin-left: 20px;
+}
+
+
+.align-center{
+    display: flex;
+    
+}
+
+.teste-flex{
+	position: relative;
+	display: flex;
+	-ms-flex-direction: column;
+	flex-direction: row;
+	min-width: 0;
+	word-wrap: break-word;
+	background-color: #fff;
+	background-clip: border-box;
+	border: 1px solid rgba(0,0,0,.125);
+	border-radius: .25rem;
+	flex-wrap: nowrap; /* Key Line */
+}
+.sidebarHover, .sidebarHover span{
+	font-family: "Montserrat", sans-serif;
+	font-optical-sizing: auto;
+	font-size: 0.8rem;
+    font-weight: 500;
+	line-height: 100%;
+	align-items: center;
+	justify-content: center;
+	vertical-align: middle;
+
+    color: white;
+	
+}
+.side-nav-container {
+	border-top-right-radius: 20px;
+	border-bottom-right-radius: 20px;
+	height: 100vh!important;
+	z-index: 10;
+	background-color: var(--light);
+	max-width: 180px;
+	overflow: hidden;
+	position: fixed;
+	color: var(--dark);
+	transition: max-width 0.4s ease-in-out;
+
+}
+.dropdown-toggle:after{
+	color: white;
+}
+.side-nav-container-NX {
+	z-index: 10;
+	max-width: 70px;
+	overflow: hidden;
+	transition: max-width 0.4s ease-in-out;
+}
+
+.nav-upper,
+.nav-heading,
+.nav-menu,
+.menu-item,
+.nav-footer {
+	/* border: 2px solid white; */
+	display: grid;
+}
+
+.nav-heading {
+	
+	
+	background: rgb(72,69,159);
+	height: 80px;
+	margin-top: -15px;
+	margin-bottom: -10px;
+}
+
+.nav-brand {
+	display: flex;
+	color: var(--light);
+}
+
+.nav-brand img {
+	width: 40px;
+	padding: 0 10px;
+}
+
+
+
+.nav-menu {
+	
+	background: rgb(72,69,159);
+	grid-template-rows: repeat(7, 1fr);
+	margin-top: 10px;
+}
+
+.menu-item {
+	height: 50px;
+	display: flex;
+	color: var(--light);
+	text-decoration: none !important;
+	text-transform: uppercase;
+	margin: auto 25px;
+	border-radius: 10px;
+}
+
+.menu-item:hover {
+	background-color: rgb(204, 204, 204);
+	width: auto;
+	height: 50px;
+
+}
+
+
+
+
+
+
+.text-margin {
+	color: white;
+}
+
+.text-decoration {
+	text-decoration: none;
+	color: white;
+}
+.icons-color {
+	color: white;
+	cursor: pointer;
+}
+.list-group-item:hover .icons-color {
+
+	cursor: pointer;
+}
+.subText {
+	white-space: nowrap!important;
+
+}
+
+.text-size {
+    font-size: 12px;
+	position: relative;
+	top: 15px;
+	margin-left: 40px;
+}
+.img-nav{
+	height: 60px;
+	padding-left: 40px;
+}
+
+#checkbox-menu {
+	position: absolute;
+	opacity: 0;
+	
+}
+.nav-heading label {
+	position: relative;
+	display: block;
+	height: 22px;
+	width: 180px;
+	top: 35px;
+}
+
+.nav-heading label span {
+	position: absolute;
+	margin-left: 17px;
+	display: block;
+	width: 100%;
+	border-radius: 30px;
+	background: rgb(255, 255, 255);
+	transition: all 0.2s ease-in-out ;
+}
+
+.nav-heading label span:nth-child(1) {
+	top: 0;
+}
+
+.nav-heading label span:nth-child(2) {
+	top: 8px;
+}
+
+.nav-heading label span:nth-child(3) {
+	top: 16px;
+}
+
+#checkbox-menu.active+label span:nth-child(1) {
+	transform: rotate(-90deg);
+	top: 8px;
+}
+
+#checkbox-menu.active+label span:nth-child(2) {
+	opacity: 0;
+}
+
+#checkbox-menu.active+label span:nth-child(3) {
+	top: 8px;
+}
+#checkbox-menu+label span{
+	width: 25px!important;
+	height: 2px;
+}
+.width-side {
+	width: 140px;
+}
+
+
+/* Estilos para o submenu */
+.dropdown-menu {
+	position: absolute;
+	top: 100%;
+	left: 0;
+	z-index: 10;
+	display: none;
+	padding: 0;
+	margin: 0;
+	list-style: none;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.list-group-item {
+	min-width: max-content;
+	cursor: pointer;
+	background: rgb(72,69,159);
+}
+
+
+.list-group-item:hover {
+	background-color: rgba(255, 255, 255, 0.2);
+	border-radius: 20px;
+
+	transition: 0.5s;
+
+}
+
+
+.list-group-item:hover span {
+	font-weight: 600;
+	transition: all 0.3s;
+}
+
+.dropdown-menu.open {
+	display: block;
+}
+
+
+
+.dropdown-menu li {
+	padding: 10px;
+}
+
+
+
+.dropdown-menu li a {
+	color: #333;
+	text-decoration: none;
+}
+
+
+
+.dropdown-menu li a:hover {
+	color: #555;
+}
+
+.decoration {
+	text-decoration: none;
+}
+
+.sub-menu {
+	margin-left: 5px;
+}
+.header-title{
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: black;
+	-webkit-text-fill-color: transparent;
+	background: rgb(255, 157, 0);
+	background: linear-gradient(60deg, #001aff 16%, rgb(172, 172, 172) 45%, #001aff 79%);
+	-webkit-background-clip: text;
+	font-weight: 800;
+	text-align: center;
+	font-size: 30px;   
+	font-family: "Roboto Slab", serif;
+	font-weight: 500;
+	letter-spacing: 1px;
+	
+}
+.product {
+	font-family: system-ui, sans-serif;
+	min-width: 120px;
+	max-width: 240px;
+	padding: 12px;
+	align-items: center;
+	justify-content: start;
+	background: #115cbd;
+	border-radius: 8px;
+	box-shadow: 0px 0px 5px -3px #111;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow-x: scroll;
+  }
+  
+  
+  .info__title {
+	width: 100%;
+	font-weight: 500;
+	font-size: 14px;
+	color: #fff;
+  }
+  
+  .info__close {
+	width: 20px;
+	height: 20px;
+	cursor: pointer;
+	margin-left: auto;
+  }
+  .react-datepicker{
+	z-index: 99999;
+  }
+  .cadastro-project{
+	position: relative;
+	z-index: 2;
+  }
+  .cardTitle{
+	margin-bottom: 20px;
+	font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    
+  }
+
+  
+.total-cadastros {
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 134.49%;
+	width: max-content;
+	color: rgb(0, 0, 0);
+  }
+  .total-box {
+	min-width: 50px;
+	height: 20px;
+	margin-left: 5px;
+	margin-bottom: 2px;
+	-webkit-box-shadow: 1px 1px 0px 1px rgba(86, 27, 102, 1);
+	-moz-box-shadow: 1px 1px 0px 1px rgba(86, 27, 102, 1);
+	box-shadow: 1px 1px 0px 1px rgba(86, 27, 102, 1);
+	border: 1px solid #89399F;
+	border-radius: 5px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 20px;
+	background-color: #ffffff;
+  }
+  .total-box span{
+	
+	font-size: 15px;
+	font-weight: bolder;
+  }
+
+
+  .status-macro{
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bolder;
+	color: rgb(54, 54, 54);
+  }
+
+  .expandedInfo{
+	max-height: 500px;
+	  transition: max-height 0.25s ease-in;
+  }
+  
+
+  .card-step {
+	width: 100%;
+	height: 45px;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	border: none;
+	border-left: 5px solid #4c0bce;
+	background-color: #fff;
+	border-radius: 5px;
+	box-shadow: 1px 1px 3px rgba(0,0,0,0.15);
+	
+   }
+   .noselect{
+	justify-content: start;
+   }
+   .card-step, .card-step span {
+	transition: 200ms;
+   }
+   
+   .card-step .text {
+	text-overflow: ellipsis;
+	overflow: hidden;
+	color: rgb(57, 57, 57);
+	font-weight: bold;
+   }
+   
+   .card-step .icon {
+	width: max-content;
+	
+
+	opacity: 0;
+	position: absolute;
+	height: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+   }
+   
+   
+   .card-step:hover {
+	background: #4c0bce;
+   }
+   .card-step:hover .text {
+	color: white;
+   }
+   
+   .card-step:hover .text {
+	margin-left: 30px;
+   }
+   
+   .card-step:hover .icon {
+	border-right: 2px solid white;
+	opacity: 1;
+	transition: opacity 0.2s;
+	justify-content: start;
+	display: flex;
+	width: max-content;
+	border-left: none;
+   }
+   
+   
+  
+  .line {
+	width: 100%;
+	height: 1px;
+	position: absolute;
+	background-color: #2058bf;
+  }
+  .topl {
+	top: 10%;
+	background: linear-gradient(90deg, #888888 30%, #2058bf 70%);
+  }
+  .bottoml {
+	bottom: 10%;
+  }
+  .leftl {
+	left: 10%;
+	width: 1px;
+	height: 100%;
+	background: linear-gradient(180deg, #747474 30%, #2058bf 70%);
+  }
+  .rightl {
+	right: 10%;
+	width: 1px;
+	height: 100%;
+  }
+  .dropdownText {
+    text-align: left;
+    white-space: nowrap;
+  }
+  .dropdownText .rw-popup-container{
+    min-width: max-content;
+  }
+  .rw-popup{
+    max-height: 200px!important;
+  }
+  .comboTitles {
+    margin-left: 5px;
+    font-size: 14px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    white-space: nowrap;
+    color: rgb(69, 69, 69);
+  }
+  
+  .default-input{
+    box-shadow: inset #abacaf 0 0 0 2px;
+    border: 0;
+    background: rgba(0, 0, 0, 0);
+    appearance: none;
+    width: 100%;
+    position: relative;
+    border-radius: 3px;
+    padding: 9px 12px;
+    line-height: 1.4;
+    color: rgb(0, 0, 0);
+    font-size: 16px;
+    font-weight: 400;
+    height: 40px;
+    transition: all .2s ease;
+  }
+  .default-input:hover{
+    box-shadow: 0 0 0 0 #fff inset, rgb(13, 110, 253) 0 0 0 2px;
+  }
+  .default-input:focus{
+    background-color: rgb(0, 0, 0, 0.1);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 2px 3px 2px, rgba(60, 64, 67, 0.15) 2px 3px 6px 2px;
+    outline: none;
+  }
+
+  
+.text-edit{
+
+  align-items: center!important;
+  display: flex;
+  font-size: larger;
+}
+
+.comentarios textarea{
+  border: 2px solid #845e97;
+  width: 100%;
+  border-radius: 10px;
+  min-height: 100px!important;
+  resize: none;
+}
+.comentarios .form-control:disabled {
+  border: 2px solid rgb(192, 192, 192);
+  background-color: rgb(239, 239, 239)!important;
+  opacity: 1;
+}
+
+.react-toast-notifications__container{
+  z-index: 99999!important;
+}
+
+.input-dados{
+  color: rgba(102, 0, 153, 1);
+  border-bottom-color: rgba(102, 0, 153, 1);
+  font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: .009375em;
+  text-decoration: inherit;
+  text-transform: inherit;
+  align-self: flex-end;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 20px 16px 6px;
+  border: none;
+  border-bottom: 2px solid;
+  border-radius: 4px 4px 0 0;
+  background: rgb(232, 231, 231);
+  height: 45px;
+
+}
+.input-dados:disabled{
+  color: rgb(134, 134, 134)!important;
+  border-bottom-color: rgb(255, 255, 255)!important;
+
+}
+.input-dados:active, .input-dados:focus { 
+  outline: none;
+  border-color: rgb(13, 110, 253);
+ }
+  .DateInput_input {
+    height: 35px;
+ }
+
+
+.etapas .rw-widget-input {
+  box-shadow: 0 0 0 0 #fff inset, rgb(7, 70, 197, 0.7) 0 0 0 2px;
+}
+.rw-dropdown-list-input, .rw-state-focus .rw-widget-picker.rw-widget-input, .rw-state-focus{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+  font-weight: 500;
+  font-size: 13px;
+  font-weight: bolder;
+  color:black;
+  border: none!important; 
+}
+.rw-state-focus, .rw-state-focus .rw-widget-picker.rw-widget-input{
+  font-size: 14px!important;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 2px 3px 2px, rgba(60, 64, 67, 0.15) 2px 3px 6px 2px!important;
+}
+
+.rw-multiselect .rw-widget{
+  text-shadow: none;
+  
+} 
+
+
+
+.input-serial{
+  border-bottom-color: #3c4fe0!important;
+  font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: .009375em;
+  text-decoration: inherit;
+  text-transform: inherit;
+  align-self: flex-end;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 20px 3px 6px;
+  border: none;
+  border-bottom: 2px solid;
+  border-radius: 4px 4px 0 0;
+  height: 2.6em;
+  text-transform: uppercase;
+
+}
+.input-serial:disabled{
+  color: rgb(134, 134, 134)!important;
+  border-bottom-color: rgb(255, 255, 255)!important;
+
+}
+.input-serial:active, .input-serial:focus { 
+  outline: none;
+  border-color: #660099;
+ }
+ .datePicker{
+  padding: 0 !important;
+ }
+ .react-datepicker__input-container input{
+  font-size: 12px;
+
+  background-color: white;
+  border: #9b9b9b 2px solid!important;
+  border-radius: 4px;
+  width: 100px!important;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+ }
+
+ .information {
+  width: max-content;
+  height: max-content;
+  padding-top: 2px;
+  background: #660099;
+  background: linear-gradient(to top left, #0400d6 0%, #cfd0ff 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  cursor: pointer;
+}
+
+.information:hover {
+  transition: all 0.2s;
+  transform: scale(1.1);
+}
+
+.nova-massiva .tooltiptext {
+  visibility: hidden;
+  color: #222;
+  font-weight: 100;
+  white-space: nowrap;
+  margin-bottom: 58px;
+  font-size: 10px;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+}
+
+.nova-massiva:hover .tooltiptext {
+  visibility: visible;
+}
+
+.button_plus {
+  margin-left: 3px;
+  border-radius: 7px;
+  width: 40px;
+  height: 40px;
+  background: #50c248;
+  cursor: pointer;
+  border: 0;
+  box-shadow: 1px 1px 5px -2px rgb(55, 184, 0.75);
+  -webkit-box-shadow: 1px 1px 5px -2px rgb(55, 184, 0.75);
+  -moz-box-shadow: 1px 1px 5px -2px rgb(55, 184, 0.75);
+
+  /* Mittig */
+}
+
+.button_plus i,
+.plus-step {
+  color: #ffffff;
+  font-size: 25px;
+  -webkit-text-stroke: 1px;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  display: flex;
+  /* Mittig */
+}
+
+
+.button_plus:hover {
+  background: #50c248;
+  transition: 0.2s;
+  box-shadow: rgb(55, 184, 0.24) 0px 1px 4px 1px;
+}
+
+.edit-card,
+.edit-stock {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 120px;
+  font-weight: 500;
+  color: white
+}
+
+.edit-card {
+  background-color: #3a5eff;
+}
+
+.edit-card:hover {
+  color: #ffffff;
+  background-color: #3a5eff;
+  -webkit-box-shadow: 1px 2px 23px 0px #3a5eff;
+  -moz-box-shadow: 1px 2px 23px 0px #3a5eff;
+  box-shadow: 1px 2px 23px 0px #3a5eff;
+}
+
+.edit-stock {
+  background-color: #42b883;
+}
+
+.edit-stock:hover {
+  color: #ffffff;
+  background-color: #42b883;
+  -webkit-box-shadow: 1px 2px 23px 0px #42b883;
+  -moz-box-shadow: 1px 2px 23px 0px #42b883;
+  box-shadow: 1px 2px 23px 0px #42b883;
+}
+
+
+
+.cleanPed {
+  border-radius: 7px;
+  width: 40px;
+  height: 40px;
+  background: #EC507D;
+  cursor: pointer;
+  border: 0;
+  box-shadow: 1px 1px 5px -2px rgb(0, 0, 0);
+  -webkit-box-shadow: 1px 1px 5px -2px rgb(0, 0, 0);
+  -moz-box-shadow: 1px 1px 5px -2px rgb(0, 0, 0);
+
+  /* Mittig */
+}
+
+.cleanPed i {
+  color: #ffffff;
+  font-size: 20px;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  display: flex;
+  /* Mittig */
+}
+
+
+.cleanPed:hover {
+  background: #e82f63;
+  transition: 0.2s;
+}
+
+.cleanPed .tooltiptext {
+  visibility: hidden;
+  color: #222;
+  font-weight: 100;
+  white-space: nowrap;
+  margin-bottom: 58px;
+  font-size: 10px;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+}
+
+.cleanPed:hover .tooltiptext {
+  visibility: visible;
+  font-weight: bolder;
+  color: rgb(77, 77, 77)
+}
+
+.deleteDate {
+  background-color: #EC507D;
+  color: white
+}
+
+.deleteDate:hover {
+  background-color: #e82f63;
+  -webkit-box-shadow: 1px 2px 23px -3px rgba(232, 47, 99, 1);
+  -moz-box-shadow: 1px 2px 23px -3px rgba(232, 47, 99, 1);
+  box-shadow: 1px 2px 23px -3px rgba(232, 47, 99, 1);
+}
+
+.sendProducts {
+  border-radius: 7px;
+  width: 40px;
+  height: 40px;
+  background: #2f32f5;
+  cursor: pointer;
+  border: 0;
+  box-shadow: 1px 1px 5px -2px rgb(0, 0, 0);
+  -webkit-box-shadow: 1px 1px 5px -2px rgb(0, 0, 0);
+  -moz-box-shadow: 1px 1px 5px -2px rgb(0, 0, 0);
+
+  /* Mittig */
+}
+
+
+.sendProducts i {
+  color: #ffffff;
+  font-size: 20px;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  display: flex;
+  /* Mittig */
+}
+
+
+.sendProducts:hover {
+  background: #2e2e2e;
+  transition: 0.2s;
+}
+
+.sendProducts .tooltiptext {
+  visibility: hidden;
+  color: #222;
+  font-weight: 100;
+  white-space: nowrap;
+  margin-bottom: 58px;
+  font-size: 10px;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+}
+
+.sendProducts:hover .tooltiptext {
+  visibility: visible;
+  font-weight: bolder;
+  color: rgb(77, 77, 77)
+}
+
+.workflow {
+  color: rgb(56, 56, 56);
+  font-weight: bolder;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 0 0 0 #fff inset, rgb(7, 70, 197, 0.7) 0 0 0 2px;
+  padding: 5px 20px;
+  border-radius: 50px;
+  border: 0;
+  text-transform: uppercase;
+  font-size: 15px;
+  transition: all .5s ease;
+}
+
+.workflow:hover {
+  background-color: hsl(261deg 80% 48%);
+  color: hsl(0, 0%, 100%);
+  box-shadow: rgb(93 24 220) 0px 3px 15px 0px;
+}
+
+.workflow:active {
+  background-color: hsl(261deg 80% 48%);
+  color: hsl(0, 0%, 100%);
+  box-shadow: rgb(93 24 220) 0px 0px 0px 0px;
+  transform: translateY(10px);
+  transition: 100ms;
 }
